--- a/css/editor.css
+++ b/css/editor.css
@@ -38,6 +38,7 @@ canvas {
 
 .portrait {
     width: 50vw;
+    border: .30vw solid black;
     border-radius: 50%;
 }
 
@@ -59,36 +60,38 @@ footer {
     position: fixed;
     top: 0;
     width: 60vw;
-    height: 60vh;
+    height: 60vw;
     margin: 5vh 20vw 10vh 20vw;
 }
 
 .finished-meme {
-    width: 60vw;
-    height: 60vw;
-    /* margin: 10vh 10vw 0px 10vw; */
+    width: 100%;
+    height: 100%;
 }
 
+/* ---Desktop--- */
 @media (min-width: 600px) {
     header {
         padding: 0%;
     }
-    
     canvas {
         width: 30vw;
         height: 30vw;
         padding: 0px;
     }
-
     .tools {
         padding-top: 3%;
+    }
+    .modal {
+        width: 60vh;
+        height: 60vh;
+        margin: 10vh 20vh;
     }
     .about-me {
         padding-bottom: 0%;
     }
-
     .portrait {
         width: 20vw;
         border-radius: 50%;
-    }    
+    }
 }
