--- a/css/chose-img.css
+++ b/css/chose-img.css
@@ -17,6 +17,7 @@ header {
 .logo {
     max-width: 70vw;
     margin: 0 auto;
+    text-shadow: 5px 5px 3px rgb(0, 0, 0);
 }
 
 h2 {
@@ -34,6 +35,7 @@ h2 {
     border: 1vw solid black;
     border-radius: 27%;
     margin: 4vw;
+    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.678);
 }
 
 .about-me {
@@ -43,14 +45,14 @@ h2 {
 
 .portrait {
     width: 50vw;
-    border: .3vw solid black;
+    border: 1vw solid black;
     border-radius: 50%;
+    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.678);
 }
 
 footer {
     text-align: center;
     font-size: 1.5rem;
-    max-width: 90vw;
     padding: 5%;
 }
 
@@ -60,6 +62,7 @@ footer {
     }
     .logo {
         font-size: 3rem;
+        cursor: default;
     }
     .gallery {
         width: 70%;
@@ -71,8 +74,12 @@ footer {
         border-radius: 25%;
         margin: 2vw auto;
     }
+    .starter-img:hover {
+        cursor: pointer;
+    }
     .portrait {
         width: 20vw;
+        border: .3vw solid black;
         border-radius: 50%;
     }
 }
