--- a/css/editor.css
+++ b/css/editor.css
@@ -5,6 +5,8 @@
 body {
     margin: 0% auto;
     background-image: url(../img/background.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
     color: #cc0637;
 }
 
