--- a/css/chose-img.css
+++ b/css/chose-img.css
@@ -82,4 +82,7 @@ footer {
         border: .3vw solid black;
         border-radius: 50%;
     }
+    .my-description {
+        font-size: 1rem;
+    }
 }
