--- a/css/chose-img.css
+++ b/css/chose-img.css
@@ -3,10 +3,19 @@ body {
     flex-flow: column;
     justify-content: center;
     margin: 0 auto;
+    color: #cc0637;
+}
+
+.background-image {
     background-image: url(../img/background.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
-    color: #cc0637;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
 }
 
 header {
