--- a/css/editor.css
+++ b/css/editor.css
@@ -10,6 +10,18 @@ body {
     color: #cc0637;
 }
 
+.background-image {
+    background-image: url(../img/background.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
+
 header {
     text-align: center;
     padding: 5% 5% 0% 5%;
